[package]
name = "ipvs"
version = "0.1.1"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "LGPL-3.0"
description = "Linux IPVS native binding (project in active development, just reserved a name)"

[dependencies]
bitflags = "0.9"
byteorder = "1"
libc = "0.2"
log = "0.3"

[dev-dependencies]
env_logger = "0.3"
